--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "angularfire2": "^4.0.0-rc.1",
     "core-js": "^2.4.1",
     "firebase": "^4.1.2",
+    "foundation-sites": "^6.3.1",
     "rxjs": "^5.1.0",
+    "web-animations-js": "^2.2.5",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
